bleeds fixed

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -63,7 +63,7 @@ footer {
 
 /* display google maps */
 #map {
-  width: 95%;
+  width: 100%;
   height: 600px;
   margin: 0 auto;
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
